# pa_client_app

./: CMakeLists.txt  README.md  main.c
lib/include/: audio.h
lib/src/: audio.c
